Fix: добавлены браузерные HTTP заголовки для обхода анти-бот защиты
- TelegramBot: downloadImage() с полными заголовками, обработка редиректов
- LotPageParser: enrichProcurement() с браузерными заголовками
- RssParser: parseUntilEnough() с заголовками для RSS запросов
- RegionValidator: проверка всех лотов (80% порог)
- ParserService: механизм повторов с валидацией региона
- Улучшено логирование ошибок загрузки изображений

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>